# 3dm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
3dm-rs/: Cargo.toml  README.md
3dm-rs/examples/: diff.rs  merge.rs  patch.rs
3dm-rs/src/: constants.rs  error.rs  lib.rs  measure.rs
3dm-rs/src/diff/: bfs_index.rs  diff_operation.rs  generator.rs  mod.rs  patch.rs
3dm-rs/src/matching/: diff.rs  heuristic.rs  mod.rs  tri.rs
3dm-rs/src/merge/: conflict_log.rs  edit_log.rs  merge_list.rs  merge_pair.rs  mod.rs
3dm-rs/src/node/: base.rs  branch.rs  match_area.rs  matched_nodes.rs  mod.rs  namespace.rs  xml_content.rs
3dm-rs/src/xml/: mod.rs  parser.rs  printer.rs
3dm-rs/tests/: compatibility.rs
tdm-cli/: Cargo.toml  README.md
tdm-cli/src/: main.rs
