[workspace]
resolver = "2"
members = [
    "3dm-rs",
    "tdm-cli",
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
installers = ["homebrew", "shell"]
tap = "06chaynes/homebrew-tap"
formula = "tdm"
pr-run-mode = "plan"
publish-jobs = ["homebrew"]

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
