[package]
name = "xml-3dm"
version = "0.1.2"
edition = "2021"
description = "3-way XML diff and merge tool"
license = "LGPL-2.1-or-later"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/3dm-rs"
homepage = "https://github.com/06chaynes/3dm-rs"
documentation = "https://docs.rs/xml-3dm"
readme = "README.md"
keywords = ["xml", "diff", "merge", "3dm", "tree-diff"]
categories = ["algorithms", "text-processing"]

[dependencies]
quick-xml = "0.39"
md-5 = "0.10"
thiserror = "2.0"
bitflags = "2.10"

[dev-dependencies]
tempfile = "3.24"
pretty_assertions = "1.4"
