[package]
name = "xml-3dm-cli"
version = "0.1.6"
edition = "2021"
description = "3DM XML Tree Differencing and Merging Tool CLI"
license = "LGPL-2.1-or-later"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/3dm-rs"
homepage = "https://github.com/06chaynes/3dm-rs"
readme = "README.md"
keywords = ["xml", "merge", "diff", "tree", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "tdm"
path = "src/main.rs"

[dependencies]
xml-3dm = { version = "0.1.6", path = "../3dm-rs" }
clap = { version = "4.5", features = ["derive"] }
